# knu-a.cherniayev-k19

./: LICENSE  README.md  semester2.code-workspace
lab1/: .gitignore  CMakeLists.txt  demo1.txt  helloworld.cpp  lab1.cpp  lab1.doc  povidom.h
lab2/: .gitignore  CMakeLists.txt  demo2.txt  demo2_16.txt  demo2_17.txt  eva.cpp  lab2.cpp  lab2a.cpp  lab2b16.cpp  lab2b17.cpp  lab2b29.cpp
lab3/: .gitignore  CMakeLists.txt  lab3a.cpp  lab3b.cpp  labdemo.cpp  labdemo.h
lab4/: .gitignore  CMakeLists.txt  lab4.cpp
