cmake_minimum_required(VERSION 3.0.0)
project(Lab2 VERSION 0.1.0)

# Піздніше спробуемо скомпілювате це у Віндовс
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(lab2a lab2a.cpp)

add_executable(lab2b16 lab2b16.cpp)

add_executable(lab2b17 lab2b17.cpp)

add_executable(lab2b29 lab2b29.cpp)
